hphp/hack/test/typecheck/shape_idx2.php.exp
File "shape_idx2.php", line 9, characters 3-17:
Too few arguments (Typing[4104])
File "hhi_lib__srcs/Shapes.hhi", line 33, characters 26-28:
Definition is here
